Prepare for CapraCon 2018