@@ -5,3 +5,8 @@ Demonstrate how to include two different versions of transitive dependencies usi
 ```
  --add-modules=java.se
 ```
+
+## Demo
+```
+<path_to_java10>java --add-modules=java.se -jar target/java-modules-demo-0.1-SNAPSHOT.jar
+```
